Crash from undoing the copy-pasting of multiple data blocks #76799

Closed
opened 2020-05-16 11:14:31 +02:00 by Xing Liu · 9 comments

System Information
Operating system: Windows 10

Blender Version
Broken: 2.83 e5ace51295b9; 2.90 eaf7d36d66e5; 2.90 f9d0f59bed
Worked: Unknown

Reproduction

  1. New default file
  2. Copy & paste Camera and Cube in Outliner
  3. Ctrl-Z -> crash
**System Information** Operating system: Windows 10 **Blender Version** Broken: 2.83 e5ace51295b9; 2.90 eaf7d36d66e5; 2.90 f9d0f59bed4d Worked: Unknown **Reproduction** 1. New default file 2. Copy & paste Camera and Cube in Outliner 3. Ctrl-Z -> crash
Author

Added subscriber: @xingyzt

Added subscriber: @xingyzt
Xing Liu changed title from Crash from undo after pasting 2+ data blocks to Crash from undoing the copy-pasting of multiple data blocks 2020-05-16 11:15:16 +02:00
Author

Does not crash after toggling on the System Console. Does not crash after toggling the console back off.

Does not crash after toggling on the System Console. Does not crash after toggling the console back off.

Added subscriber: @deadpin

Added subscriber: @deadpin

I can confirm the crash here. Note that this does NOT happen if using the old, legacy, undo system.

base->object is nullptr

blender.exe!BKE_scene_object_base_flag_sync_from_base(Base * base) Line 1606	C
blender.exe!BKE_scene_set_background(Main * bmain, Scene * scene) Line 786	C
blender.exe!setup_app_data(bContext * C, BlendFileData * bfd, const unsigned char * filepath, const BlendFileReadParams * params, ReportList * reports) Line 384	C
blender.exe!setup_app_blend_file_data(bContext * C, BlendFileData * bfd, const unsigned char * filepath, const BlendFileReadParams * params, ReportList * reports) Line 414	C
blender.exe!BKE_blendfile_read_from_memfile(bContext * C, MemFile * memfile, const BlendFileReadParams * params, ReportList * reports) Line 510	C
blender.exe!BKE_memfile_undo_decode(MemFileUndoData * mfu, const int undo_direction, const bool use_old_bmain_data, bContext * C) Line 87	C
blender.exe!memfile_undosys_step_decode(bContext * C, Main * bmain, UndoStep * us_p, int undo_direction, bool UNUSED_is_final) Line 192	C
blender.exe!undosys_step_decode(bContext * C, Main * bmain, UndoStack * ustack, UndoStep * us, int dir, bool is_final) Line 211	C
blender.exe!BKE_undosys_step_undo_with_data_ex(UndoStack * ustack, bContext * C, UndoStep * us, bool use_skip) Line 698	C
blender.exe!BKE_undosys_step_undo_with_data(UndoStack * ustack, bContext * C, UndoStep * us) Line 726	C
blender.exe!BKE_undosys_step_undo(UndoStack * ustack, bContext * C) Line 731	C
blender.exe!ed_undo_step_impl(bContext * C, int step, const unsigned char * undoname, int undo_index, ReportList * reports) Line 200	C
blender.exe!ed_undo_step_direction(bContext * C, int step, ReportList * reports) Line 264	C
blender.exe!ed_undo_exec(bContext * C, wmOperator * op) Line 399	C
blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1282	C
blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2102	C
blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2412	C
blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2707	C
blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2834	C
blender.exe!wm_event_do_handlers(bContext * C) Line 3356	C
blender.exe!WM_main(bContext * C) Line 453	C
I can confirm the crash here. Note that this does NOT happen if using the old, legacy, undo system. ``` base->object is nullptr blender.exe!BKE_scene_object_base_flag_sync_from_base(Base * base) Line 1606 C blender.exe!BKE_scene_set_background(Main * bmain, Scene * scene) Line 786 C blender.exe!setup_app_data(bContext * C, BlendFileData * bfd, const unsigned char * filepath, const BlendFileReadParams * params, ReportList * reports) Line 384 C blender.exe!setup_app_blend_file_data(bContext * C, BlendFileData * bfd, const unsigned char * filepath, const BlendFileReadParams * params, ReportList * reports) Line 414 C blender.exe!BKE_blendfile_read_from_memfile(bContext * C, MemFile * memfile, const BlendFileReadParams * params, ReportList * reports) Line 510 C blender.exe!BKE_memfile_undo_decode(MemFileUndoData * mfu, const int undo_direction, const bool use_old_bmain_data, bContext * C) Line 87 C blender.exe!memfile_undosys_step_decode(bContext * C, Main * bmain, UndoStep * us_p, int undo_direction, bool UNUSED_is_final) Line 192 C blender.exe!undosys_step_decode(bContext * C, Main * bmain, UndoStack * ustack, UndoStep * us, int dir, bool is_final) Line 211 C blender.exe!BKE_undosys_step_undo_with_data_ex(UndoStack * ustack, bContext * C, UndoStep * us, bool use_skip) Line 698 C blender.exe!BKE_undosys_step_undo_with_data(UndoStack * ustack, bContext * C, UndoStep * us) Line 726 C blender.exe!BKE_undosys_step_undo(UndoStack * ustack, bContext * C) Line 731 C blender.exe!ed_undo_step_impl(bContext * C, int step, const unsigned char * undoname, int undo_index, ReportList * reports) Line 200 C blender.exe!ed_undo_step_direction(bContext * C, int step, ReportList * reports) Line 264 C blender.exe!ed_undo_exec(bContext * C, wmOperator * op) Line 399 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1282 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2102 C blender.exe!wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2412 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2707 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2834 C blender.exe!wm_event_do_handlers(bContext * C) Line 3356 C blender.exe!WM_main(bContext * C) Line 453 C ```
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Doesn't happen if cmd + C, cmd + V is done in viewport. Specific to outliner.

Doesn't happen if cmd + C, cmd + V is done in viewport. Specific to outliner.
Bastien Montagne self-assigned this 2020-05-18 12:04:07 +02:00

This issue was referenced by 121b2c0424

This issue was referenced by 121b2c0424465800ba79c0c7a4403cc2999b261b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:35:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76799
No description provided.